Fixed bottom nav bar on explore and profile pages. Fixed loading animation to overlap the bottom nav bar.

--- a/olympi-client/src/components/feed/FeedFooter.css
+++ b/olympi-client/src/components/feed/FeedFooter.css
@@ -5,6 +5,7 @@
   bottom: 0px;
   position: fixed;
   width: 100%;
+  z-index: 99;
 
   box-shadow: 0 -5px 3px -3px #ccc, 0 0;
 
